--- a/NodeJS/CNPMNC/.env
+++ b/NodeJS/CNPMNC/.env
@@ -1,1 +1,2 @@
 DATABASE_URL=mongodb+srv://CNPMNC:CNPMNC2021@cluster0.wrkxf.mongodb.net/ThueXeDB?retryWrites=true&w=majority
+SESSION_SECRET = secret
